{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 165,
  "lineage": "a587d063-9d93-4da2-42dc-fee5917d5a7f",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:330214284546:vpc/vpc-0dcf66027ed7adec8",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c105e8d3b331de14",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0e78d9bd3edd3a5a1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dcf66027ed7adec8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c04dfb59786d5954",
            "owner_id": "330214284546"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:330214284546:instance/i-08607989bc3595897",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-08607989bc3595897",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5n.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-057606f702edf0a94",
            "private_dns": "ip-172-31-42-57.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.42.57",
            "public_dns": "ec2-54-187-31-18.us-west-2.compute.amazonaws.com",
            "public_ip": "54.187.31.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00a38a84f63139256",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "album-store-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3af44de7b380be5",
            "tags": {
              "Name": "album-store-node-1"
            },
            "tags_all": {
              "Name": "album-store-node-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03e912842f05ef0db"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_db_subnet_group.album_store",
            "aws_elasticache_replication_group.redis",
            "aws_elasticache_subnet_group.album_store",
            "aws_s3_bucket.photos",
            "aws_s3_bucket_policy.photos_public_read",
            "aws_s3_bucket_public_access_block.photos",
            "aws_security_group.album_store",
            "data.aws_ami.al2023",
            "data.aws_caller_identity.current",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:330214284546:instance/i-068a0c52f55ee655b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-068a0c52f55ee655b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5n.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08e70410dea17be1e",
            "private_dns": "ip-172-31-36-12.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.36.12",
            "public_dns": "ec2-44-250-71-173.us-west-2.compute.amazonaws.com",
            "public_ip": "44.250.71.173",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0371b3afdff2bf5b0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "album-store-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3af44de7b380be5",
            "tags": {
              "Name": "album-store-node-2"
            },
            "tags_all": {
              "Name": "album-store-node-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03e912842f05ef0db"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_db_subnet_group.album_store",
            "aws_elasticache_replication_group.redis",
            "aws_elasticache_subnet_group.album_store",
            "aws_s3_bucket.photos",
            "aws_s3_bucket_policy.photos_public_read",
            "aws_s3_bucket_public_access_block.photos",
            "aws_security_group.album_store",
            "data.aws_ami.al2023",
            "data.aws_caller_identity.current",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:330214284546:instance/i-049c23145a6694e77",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-049c23145a6694e77",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5n.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00a0edf6d163f9935",
            "private_dns": "ip-172-31-35-45.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.35.45",
            "public_dns": "ec2-34-220-96-211.us-west-2.compute.amazonaws.com",
            "public_ip": "34.220.96.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-078ce8e650d242507",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "album-store-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3af44de7b380be5",
            "tags": {
              "Name": "album-store-node-3"
            },
            "tags_all": {
              "Name": "album-store-node-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03e912842f05ef0db"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_db_subnet_group.album_store",
            "aws_elasticache_replication_group.redis",
            "aws_elasticache_subnet_group.album_store",
            "aws_s3_bucket.photos",
            "aws_s3_bucket_policy.photos_public_read",
            "aws_s3_bucket_public_access_block.photos",
            "aws_security_group.album_store",
            "data.aws_ami.al2023",
            "data.aws_caller_identity.current",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0250adf05ecc45684",
            "arn": "arn:aws:ec2:us-west-2:330214284546:instance/i-0fdf09931565e0bb1",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-0fdf09931565e0bb1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5n.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-026b1538d34823e5c",
            "private_dns": "ip-172-31-38-143.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.38.143",
            "public_dns": "ec2-44-249-42-156.us-west-2.compute.amazonaws.com",
            "public_ip": "44.249.42.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06b75359975a4d9f1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "album-store-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3af44de7b380be5",
            "tags": {
              "Name": "album-store-node-4"
            },
            "tags_all": {
              "Name": "album-store-node-4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03e912842f05ef0db"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_db_subnet_group.album_store",
            "aws_elasticache_replication_group.redis",
            "aws_elasticache_subnet_group.album_store",
            "aws_s3_bucket.photos",
            "aws_s3_bucket_policy.photos_public_read",
            "aws_s3_bucket_public_access_block.photos",
            "aws_security_group.album_store",
            "data.aws_ami.al2023",
            "data.aws_caller_identity.current",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "album_store",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:loadbalancer/app/album-store-alb/926b671b762310c4",
            "arn_suffix": "app/album-store-alb/926b671b762310c4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "album-store-alb-339289603.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:330214284546:loadbalancer/app/album-store-alb/926b671b762310c4",
            "idle_timeout": 300,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "album-store-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03e912842f05ef0db"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00a5b4c78f9dc930f"
              },
              {
                "subnet_id": "subnet-08c5acf2bafe2434a"
              },
              {
                "subnet_id": "subnet-0d7dcf2b802c9f9f5"
              },
              {
                "subnet_id": "subnet-0f3af44de7b380be5"
              }
            ],
            "subnets": [
              "subnet-00a5b4c78f9dc930f",
              "subnet-08c5acf2bafe2434a",
              "subnet-0d7dcf2b802c9f9f5",
              "subnet-0f3af44de7b380be5"
            ],
            "tags": {
              "Name": "album-store-alb"
            },
            "tags_all": {
              "Name": "album-store-alb"
            },
            "vpc_id": "vpc-0dcf66027ed7adec8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.album_store",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:listener/app/album-store-alb/926b671b762310c4/1bc52c1fa17301db",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:targetgroup/album-store-tg/9db154e01830769a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:330214284546:listener/app/album-store-alb/926b671b762310c4/1bc52c1fa17301db",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:loadbalancer/app/album-store-alb/926b671b762310c4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.album_store",
            "aws_lb_target_group.nodes",
            "aws_security_group.album_store",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:targetgroup/album-store-tg/9db154e01830769a",
            "arn_suffix": "targetgroup/album-store-tg/9db154e01830769a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:330214284546:targetgroup/album-store-tg/9db154e01830769a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:330214284546:loadbalancer/app/album-store-alb/926b671b762310c4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "album-store-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "album-store-tg"
            },
            "tags_all": {
              "Name": "album-store-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dcf66027ed7adec8"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:330214284546:targetgroup/album-store-tg/9db154e01830769a-20260418184618746000000006",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:targetgroup/album-store-tg/9db154e01830769a",
            "target_id": "i-08607989bc3595897"
          },
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_db_subnet_group.album_store",
            "aws_elasticache_replication_group.redis",
            "aws_elasticache_subnet_group.album_store",
            "aws_instance.nodes",
            "aws_lb_target_group.nodes",
            "aws_s3_bucket.photos",
            "aws_s3_bucket_policy.photos_public_read",
            "aws_s3_bucket_public_access_block.photos",
            "aws_security_group.album_store",
            "data.aws_ami.al2023",
            "data.aws_caller_identity.current",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:330214284546:targetgroup/album-store-tg/9db154e01830769a-20260418184618718200000005",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:targetgroup/album-store-tg/9db154e01830769a",
            "target_id": "i-068a0c52f55ee655b"
          },
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_db_subnet_group.album_store",
            "aws_elasticache_replication_group.redis",
            "aws_elasticache_subnet_group.album_store",
            "aws_instance.nodes",
            "aws_lb_target_group.nodes",
            "aws_s3_bucket.photos",
            "aws_s3_bucket_policy.photos_public_read",
            "aws_s3_bucket_public_access_block.photos",
            "aws_security_group.album_store",
            "data.aws_ami.al2023",
            "data.aws_caller_identity.current",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:330214284546:targetgroup/album-store-tg/9db154e01830769a-20260418184618804200000008",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:targetgroup/album-store-tg/9db154e01830769a",
            "target_id": "i-049c23145a6694e77"
          },
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_db_subnet_group.album_store",
            "aws_elasticache_replication_group.redis",
            "aws_elasticache_subnet_group.album_store",
            "aws_instance.nodes",
            "aws_lb_target_group.nodes",
            "aws_s3_bucket.photos",
            "aws_s3_bucket_policy.photos_public_read",
            "aws_s3_bucket_public_access_block.photos",
            "aws_security_group.album_store",
            "data.aws_ami.al2023",
            "data.aws_caller_identity.current",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:330214284546:targetgroup/album-store-tg/9db154e01830769a-20260418184618757000000007",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:330214284546:targetgroup/album-store-tg/9db154e01830769a",
            "target_id": "i-0fdf09931565e0bb1"
          },
          "dependencies": [
            "aws_db_instance.postgres",
            "aws_db_subnet_group.album_store",
            "aws_elasticache_replication_group.redis",
            "aws_elasticache_subnet_group.album_store",
            "aws_instance.nodes",
            "aws_lb_target_group.nodes",
            "aws_s3_bucket.photos",
            "aws_s3_bucket_policy.photos_public_read",
            "aws_s3_bucket_public_access_block.photos",
            "aws_security_group.album_store",
            "data.aws_ami.al2023",
            "data.aws_caller_identity.current",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "album_store",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:330214284546:security-group/sg-03e912842f05ef0db",
            "description": "Album store: HTTP, SSH, and internal traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e912842f05ef0db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "album-store-sg",
            "name_prefix": "",
            "owner_id": "330214284546",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "album-store-sg"
            },
            "tags_all": {
              "Name": "album-store-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcf66027ed7adec8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}